--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,11 +3,12 @@
     "target": "ES2020",
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "dist",
-    "rootDir": "src",
+  "outDir": "dist",
+  "rootDir": ".",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["node", "jest"]
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
