--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,12 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: JWT_SECRET
+        generateValue: true
+      - key: DATABASE_URL
+        fromDatabase:
+          name: crm-database
+          property: connectionString
 
 databases:
   - name: crm-database
