--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.19.0"
-  },
-  "devDependencies": {
+    "prisma": "^6.19.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
@@ -34,7 +32,9 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.0",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.12"
+  },
+  "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^29.0.0",
     "supertest": "^6.3.3",
