--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     type: web
     runtime: node
     plan: free
-    buildCommand: cd server && npm install && npm run build
+    buildCommand: cd server && npm install && npm run build && npx prisma migrate deploy
     startCommand: cd server && npm start
     region: ohio
     autoDeployTrigger: "off"
