--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,19 @@
 services:
+  - name: crm
+    type: web
+    runtime: static
+    plan: free
+    buildCommand: cd client && npm install && npm run build
+    startCommand: cd client && npx --yes serve -s dist -l $PORT
+    region: ohio
+    autoDeployTrigger: "off"
+    envVars:
+      - key: VITE_API_URL
+        fromService:
+          name: crm-server
+          type: web
+          property: hostport
+
   - name: crm-server
     type: web
     runtime: node
