--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
     type: web
     runtime: node
     plan: free
-    buildCommand: cd server && npm install && npx prisma migrate deploy && npm run build
+    buildCommand: cd server && npm install && npx prisma migrate reset && npm run build
     startCommand: cd server && npm start
     region: ohio
     autoDeployTrigger: "off"
