--- a/server/package.json
+++ b/server/package.json
@@ -9,21 +9,12 @@
     "build": "tsc",
     "start": "node dist/src/index.js"
   },
-  "prisma": {
-    "seed": "ts-node src/prisma/seed.ts"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.19.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
@@ -32,7 +23,14 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.0",
-    "@types/supertest": "^2.0.12"
+    "@types/supertest": "^2.0.12",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.19.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
