--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,8 @@ services:
     type: web
     runtime: node
     plan: free
-    buildCommand: cd server && npm install && npx prisma migrate reset --force && npm run build
+    # We are doing a reset here for demo purposes; in a production app, consider running migrations instead (e.g., `npx prisma migrate deploy`)
+    buildCommand: cd server && npm install && npx prisma generate && npx prisma migrate reset --force && npm run build
     startCommand: cd server && npm start
     region: ohio
     autoDeployTrigger: "off"
