--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
         fromService:
           name: crm-server
           type: web
-          property: hostport
+          property: host
 
   - name: crm-server
     type: web
