Host and port needs to be separate

--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,16 @@ services:
     staticPublishPath: client/dist
     autoDeployTrigger: "off"
     envVars:
-      - key: VITE_API_URL
+      - key: VITE_API_HOST
         fromService:
           name: crm-server
           type: web
           property: host
+      - key: VITE_API_PORT
+        fromService:
+          name: crm-server
+          type: web
+          property: port
 
   - name: crm-server
     type: web
