Revert "Host and port needs to be separate"
This reverts commit f30eaa5139f8c7028d9b107dcb8a139e17ce782a.

--- a/render.yaml
+++ b/render.yaml
@@ -6,16 +6,11 @@ services:
     staticPublishPath: client/dist
     autoDeployTrigger: "off"
     envVars:
-      - key: VITE_API_HOST
+      - key: VITE_API_URL
         fromService:
           name: crm-server
           type: web
           property: host
-      - key: VITE_API_PORT
-        fromService:
-          name: crm-server
-          type: web
-          property: port
 
   - name: crm-server
     type: web
