--- a/render.yaml
+++ b/render.yaml
@@ -24,7 +24,7 @@ services:
     buildCommand: cd server && npm install && echo "Resetting database..." && echo "Running in working directory $(pwd)" && echo "Contents of $(pwd)/src/prisma:" && ls -la $(pwd)/src/prisma && npx prisma migrate reset --force && npm run build
     startCommand: cd server && npm start
     region: ohio
-    autoDeployTrigger: commit
+    autoDeployTrigger: off
     envVars:
       - key: NODE_ENV
         value: production
