Refactor build command for crm-server service to remove unnecessary echo statements

--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
     runtime: node
     plan: free
     # We are doing a reset here for demo purposes; in a production app, consider running migrations instead (e.g., `npx prisma migrate deploy`)
-    buildCommand: cd server && npm install && echo "Resetting database..." && echo "Running in working directory $(pwd)" && echo "Contents of $(pwd)/src/prisma:" && ls -la $(pwd)/src/prisma && npx prisma migrate reset --force && npm run build
+    buildCommand: cd server && npm install && npx prisma migrate reset --force && npm run build
     startCommand: cd server && npm start
     region: ohio
     autoDeployTrigger: off
